--- a/app/assets/stylesheets/spree/frontend.scss
+++ b/app/assets/stylesheets/spree/frontend.scss
@@ -1,1 +1,6 @@
+/*
+* This is a manifest file that includes stylesheets for spree_frontend
+ *= require normalize
+ *= require spree/frontend/screen
+*/
 @import "bootstrap";
